syntax = "proto3";
package chain4energy.c4echain.cfefingerprint;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
// this line is used by starport scaffolding # 1

option go_package = "github.com/chain4energy/c4e-chain/x/cfefingerprint/types";

// Query defines the gRPC querier service.
service Query {
  // Queries a list of VerifyReferencePayloadLink items.
	rpc VerifyReferencePayloadLink(QueryVerifyReferencePayloadLinkRequest) returns (QueryVerifyReferencePayloadLinkResponse) {
		option (google.api.http).get = "/c4e/fingerprint/verify_reference_payload_link/{reference_id}/{payload_hash}";
	}

  // this line is used by starport scaffolding # 2
}

message QueryVerifyReferencePayloadLinkRequest {
  string reference_id = 1;
  string payload_hash = 2;
}

message QueryVerifyReferencePayloadLinkResponse {
  bool is_valid = 1;
}

// this line is used by starport scaffolding # 3
